# data-engineering-dtc-zoomcamp-2026

./: .gitignore  README.md  profiles.yml
01-docker-terraform/: .gitignore
01-docker-terraform/homework/: .ingest_data.py.swp  Dockerfile  README.md  commands  docker-compose.yaml  homework.md  ingest_data.py  pyproject.toml
01-docker-terraform/homework/app/: ingest_data.py  my_dtypes.py
01-docker-terraform/homework/notebooks/: notebook.ipynb
01-docker-terraform/terraform_demo/: main.tf  variables.tf
01-docker-terraform/workshop/: Dockerfile  commands  docker-compose.yaml  v3_docker-compose.yaml
01-docker-terraform/workshop/notebooks/: notebook.ipynb
02-workflow-orchestration/: add_all_flows.sh
02-workflow-orchestration/workshop/: docker-compose.yml  file2base64.sh  homework.md
03-data-warehouse/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  upload_files.yaml
03-data-warehouse/app/: load_yellow_taxi_data.py
04-analytics-engineering/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
04-analytics-engineering/app/: load_taxi_data.py
04-analytics-engineering/dbt/: .gitignore  dbt-project-explained.md
04-analytics-engineering/dbt/models/staging/: sources.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
